RESOLVED FIXED165274
Always check the return value of pthread_key_create()
https://bugs.webkit.org/show_bug.cgi?id=165274
Summary Always check the return value of pthread_key_create()
David Kilzer (:ddkilzer)
Reported 2016-12-01 13:57:18 PST
WebKit should always check the return value of pthread_key_create().
Attachments
Patch v1 (4.30 KB, patch)
2016-12-01 14:06 PST, David Kilzer (:ddkilzer)
darin: review+
buildbot: commit-queue-
Archive of layout-test-results from ews117 for mac-yosemite (1.88 MB, application/zip)
2016-12-01 16:12 PST, Build Bot
no flags
David Kilzer (:ddkilzer)
Comment 1 2016-12-01 14:06:29 PST
Created attachment 295894 [details] Patch v1
David Kilzer (:ddkilzer)
Comment 2 2016-12-01 14:10:37 PST
The other place that the return value of pthread_key_create() is currently checked is here: Source/WTF/wtf/ThreadSpecific.h The idiom used in this code has caught bugs recently (potential leaks of JSC::MachineThreads::MachineThreads objects).
Build Bot
Comment 3 2016-12-01 16:12:23 PST
Comment on attachment 295894 [details] Patch v1 Attachment 295894 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/2603847 New failing tests: transitions/default-timing-function.html
Build Bot
Comment 4 2016-12-01 16:12:27 PST
Created attachment 295909 [details] Archive of layout-test-results from ews117 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews117 Port: mac-yosemite Platform: Mac OS X 10.10.5
David Kilzer (:ddkilzer)
Comment 5 2016-12-08 17:51:04 PST
(In reply to comment #3) > Comment on attachment 295894 [details] > Patch v1 > > Attachment 295894 [details] did not pass mac-debug-ews (mac): > Output: http://webkit-queues.webkit.org/results/2603847 > > New failing tests: > transitions/default-timing-function.html I don't see the crashes or failing tests when I run locally trunk r209565. Going to land the patch manually.
David Kilzer (:ddkilzer)
Comment 6 2016-12-08 17:55:27 PST
Note You need to log in before you can comment on or make changes to this bug.