Always check the return value of pthread_key_create() <https://webkit.org/b/165274>

Reviewed by Darin Adler.

Source/bmalloc:

* bmalloc/PerThread.h:
(bmalloc::PerThreadStorage::init): Call BCRASH() if
pthread_key_create() returns an error.  The error code will be
stored in a register available in a crash log, so no need to log
the value explicitly.

Source/WebCore:

* platform/ios/wak/WebCoreThread.mm:
(InitThreadContextKey): Call CRASH() if pthread_key_create()
returns an error.  The error code will be stored in a register
available in a crash log, so no need to log the value
explicitly.

Source/WTF:

* wtf/ThreadIdentifierDataPthreads.cpp:
(WTF::ThreadIdentifierData::initializeOnce): Make the code more
readable by assigning a variable to the result of
pthread_key_create().  This matches the idiom used elsewhere.

Canonical link: https://commits.webkit.org/183246@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209590 268f45cc-cd09-0410-ab3c-d52691b4dbfc